--- a/.stylelintrc
+++ b/.stylelintrc
@@ -17,9 +17,9 @@
     "function-linear-gradient-no-nonstandard-direction": true,
     "keyframe-declaration-no-important": true,
     "media-feature-name-no-unknown": true,
-    "no-descending-specificity": false,
+    "no-descending-specificity": null,
     "no-duplicate-at-import-rules": true,
-    "no-duplicate-selectors": false,
+    "no-duplicate-selectors": null,
     "no-empty-source": true,
     "no-extra-semicolons": true,
     "no-invalid-double-slash-comments": true,
