Improve stylelint config

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -70,7 +70,7 @@
     "declaration-block-semicolon-space-before": "never",
     "declaration-block-single-line-max-declarations": 1,
     "declaration-block-trailing-semicolon": "always",
-    "declaration-colon-newline-after": "always-multi-line",
+    "declaration-colon-newline-after": null,
     "declaration-colon-space-after": "always-single-line",
     "declaration-colon-space-before": "never",
     "declaration-empty-line-before": [ "always", {
@@ -127,11 +127,12 @@
     "selector-pseudo-element-colon-notation": "double",
     "selector-type-case": "lower",
     "unit-case": "lower",
-    "value-list-comma-newline-after": "always-multi-line",
+    "value-list-comma-newline-after": null,
     "value-list-comma-space-after": "always-single-line",
     "value-list-comma-space-before": "never",
     "value-list-max-empty-lines": 0,
     "font-family-name-quotes": "always-where-required",
-    "string-quotes": "double"
+    "string-quotes": "double",
+    "shorthand-property-no-redundant-values": true
   }
 }
