--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,13 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "overrides": [
+    {
+      "files": "*.css",
+      "options": {
+        "singleQuote": false
+      }
+    }
+  ]
 }
